# fafo

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .versions  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml  eslint.config.mjs  install-dependencies  lint-staged.config.mjs  package.json  prettier.config.mjs  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create
.github/: dependabot.yml
.github/actions/dump-runner-stats/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/parse-gnu-time/: README.md  action.yml  package.json  parse.js
.github/actions/parse-gnu-time/tests/: parse.test.js
.github/actions/setup-benchmark/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  coverage.yml  publilsh-rust-crates-manually.yml  publish-devcon-manually.yml
.husky/: pre-commit
.tooling-config/eslint/: .gitignore  jsconfig.json  package.json  tsconfig.json  tsup.config.mjs
.tooling-config/eslint/src/: index.ts  recommended.ts  strict.ts
.tooling-config/prettier/: package.json  tsconfig.json  tsup.config.mjs
.tooling-config/prettier/src/: index.ts  types.d.ts
.tooling-config/tsup/: package.json  tsconfig.json  tsup.config.mjs
.tooling-config/tsup/src/: index.ts
.tooling-config/typescript/: base.json  package.json
bench-sendeth/: Cargo.toml  readme.md  run.sh
bench-sendeth/src/common/: cli.rs  def.rs  generators.rs  init.rs  mod.rs  parallel_transfer.rs  preloader.rs  utils.rs
codedb/: Cargo.toml
codedb/src/: cache.rs  def.rs  lib.rs  uring.rs
exepipe/: Cargo.toml
exepipe-common/: Cargo.toml
exepipe-common/src/: acc_data.rs  access_set.rs  def.rs  lib.rs  revm.rs  slot_entry_value.rs  statecache.rs  utils.rs
exepipe-common/src/executor/: adapter.rs  error.rs  exector_database.rs  execute_tx.rs  executor.rs  executor_proxy.rs  get_change_set.rs  mod.rs
exepipe-common/src/test_utils/: changeset_builder.rs  mod.rs
exepipe/src/: def.rs  exetask.rs  framer.rs  lib.rs  mempool.rs  test_helper.rs
exepipe/src/context/: block_context.rs  mod.rs  tx_context.rs  utils.rs
exepipe/src/dispatcher/: dashboard.rs  def.rs  dispatchable.rs  dispatcher.rs  dtask.rs  mod.rs
exepipe/src/simulator/: crw_sets.rs  mod.rs  simulator.rs  simulator_shard.rs
exepipe/src/utils/: atomic_u256.rs  atomic_vec.rs  mod.rs  para_bloom.rs
exepipe/tests/: test_context.rs  test_revm.rs
hpfile/: Cargo.toml  README.md
hpfile/src/: file.rs  lib.rs
qmdb/: Cargo.toml
qmdb/src/: compactor.rs  config.rs  def.rs  lib.rs  metadb.rs  updater.rs
qmdb/src/entryfile/: entry.rs  entrybuffer.rs  entrycache.rs  entryfile.rs  helpers.rs  mod.rs  readbuf.rs
qmdb/src/flusher/: barrier_set.rs  flusher.rs  mod.rs  shard.rs
qmdb/src/indexer/: indexer_trait.rs  kvlist.rs  memidx.rs  mod.rs
qmdb/src/indexer/hybrid/: file_reader.rs  index_cache.rs  mod.rs  ref_unit.rs  tempfile.rs
qmdb/src/indexer/utils/: mod.rs  poslist.rs
qmdb/src/merkletree/: check.rs  helpers.rs  mod.rs  proof.rs  recover.rs  tree.rs  twig.rs  twigfile.rs
qmdb/src/mutator/: entrymutator.rs  mod.rs  noop.rs
qmdb/src/prefetcher/: dioprefetcher.rs  mod.rs  uniprefetcher.rs
qmdb/src/tasks/: bptaskhub.rs  mod.rs  task.rs  task_id_set.rs  taskid.rs  tasksmanager.rs
qmdb/src/test_helper/: mod.rs  randsrc.rs  task_builder.rs
qmdb/src/utils/: activebits.rs  bitmap.rs  bytescache.rs  changeset.rs  codec.rs  hasher.rs  intset.rs  lfsr.rs  mod.rs  mpsc.rs  ringchannel.rs  shortlist.rs  slice.rs
qmdb/tests/: test_proof.rs  test_recover.rs  test_tree.rs
scripts/: detect-js-pm  format  lint
workloads/: checksums.md5  get_workloads.sh
