[workspace]
resolver = "2"
members = [
    "hpfile",
    "exepipe",
    "codedb",
    "exepipe-common",
    "bench-sendeth",
]

[workspace.dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
alloy = "0.11.1"
alloy-sol-types = "0.8.21"
anyhow = "1.0.96"
archivaldb = { path = "archivaldb" }
atomptr = "1.4.1"
bincode = "1.3.3"
blake2 = "0.10.6"
btree-slab = "0.6.1"
byteorder = "1.5.0"
bytes = "1.10.0"
chrono = "0.4"
clap = "4.5"
codedb = { path = "codedb" }
criterion = "0.5"
dashmap = "6.1.0"
exepipe = { path = "exepipe" }
exepipe-common = { path = "exepipe-common", default-features = false }
generic-array = "=1.1.0"
hex = "0.4.3"
hpfile = { path = "hpfile" }
lazy_static = "1.5.0"
libc = "0.2.170"
log = "0.4"
env_logger = "0.11"
memory-stats = "1.2.0"
num-traits = "0.2.19"
once_cell = "1.20.3"
parking_lot = "0.12.3"
qmdb = { path = "qmdb", default-features = false }
rand_core = "0.6.4"
rayon = "1.10.0"
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.2" }
revm = { version = "20.0.0", features = [
    "serde",
    "serde-json",
    "std",
    "alloydb",
] }
rocksdb = "0.22.0"
rs_merkle = "1.5"
serde = { version = "1.0.218", default-features = false }
serde_json = { version = "1.0.139", default-features = false }
serial_test = "3.2.0"
sha2 = "0.10.8"
sp1-helper = "4.1.1"
sp1-sdk = "4.1.1"
sp1-zkvm = "4.1.1"
sp1-build = "4.1.1"
tempfile = "3.17.1"
threadpool = "1.8.1"
time = "0.3.37"
tracing = "0.1.41"
xtaskops = "0.4.2"
xxhash-rust = "0.8.15"
dotenv = "0.15.0"
tick_counter = "0.4.5"
crossbeam = "0.8"
tikv-jemallocator = "0.6"
io-uring = "0.7.2"
strum = { version = "0.27" }
thiserror = { version = "2.0.12" }
cfg-if = { version = "1.0.0" }
smallvec = { version = "1.15", features = ["const_generics"] }
auto_impl = { version = "1.3.0" }
itertools = "0.12"
indicatif = "0.17"
metrics = "0.24"
metrics-util = "0.19"
ordered-float = "4.6"

[workspace.package]
license = "MIT"
keywords = ["revm", "evm", "ethereum", "blockchain"]
repository = "https://github.com/LayerZero-Labs/fafo"
documentation = "https://LayerZero-Labs.github.io/fafo"
homepage = ""
edition = "2021"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
codegen-units = 16
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = 2
inherits = "release"
strip = false
incremental = true

# Make sure debug symbols are in the bench profile
[profile.bench]
inherits = "profiling"

# For faster development
[profile.release-incremental]
inherits = "release"
incremental = true

[profile.ethtests]
inherits = "test"
opt-level = 3
