[package]
name = "exepipe-common"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
bincode = { workspace = true }
qmdb = { workspace = true }
tempfile = { workspace = true }
revm.workspace = true
thiserror.workspace = true
smallvec = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
codedb = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
serial_test = { workspace = true }

[features]
default = ["qmdb/default"]
test-utils = []            # Feature flag for test utilities
