[package]
name = "qmdb"
version = "0.2.0"
edition = "2021"
description = "A high-performance verifiable key-value store, designed to optimize blockchain state storage."
repository = "https://github.com/LayerZero-Labs/qmdb"
authors = ["LayerZero Labs Research"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { workspace = true, features = ["asm", "asm-aarch64", "sha2-asm"] }
lazy_static = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh32", "xxh3"] }
threadpool = { workspace = true }
atomptr = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
time = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
blake2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
hpfile = { workspace = true }
rs_merkle = { workspace = true }
aes-gcm = { workspace = true }
aead = { workspace = true }
generic-array = { workspace = true }
log = { workspace = true }
crossbeam = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
cfg-if = { workspace = true }
smallvec = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }


[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }
tikv-jemallocator = { workspace = true }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
tick_counter = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
memory-stats = { workspace = true }
rocksdb = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
check_rec = []
use_hybridindexer = []
check_hybridindexer = []
profiling_hybridindexer = []
tee_cipher = []
slow_hashing = []
